niri-lua/src/snapshots/niri_lua__config_wrapper__tests__animations_slowdown_transformation.snap
---
source: niri-lua/src/config_wrapper.rs
expression: "(slowdown, off)"
---
(
    3.0,
    false,
)
