niri-lua/src/snapshots/niri_lua__config_wrapper__tests__center_focused_column_enum_values.snap
---
source: niri-lua/src/config_wrapper.rs
expression: "(never_value, always_value, overflow_value)"
---
(
    "Never",
    "Always",
    "OnOverflow",
)
