niri-lua/src/snapshots/niri_lua__config_wrapper__tests__config_wrapper_default_animations.snap
---
source: niri-lua/src/config_wrapper.rs
expression: animations
---
"Animations {\n    off: false,\n    slowdown: 1.0,\n    workspace_switch: WorkspaceSwitchAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 1.0,\n                    stiffness: 1000,\n                    epsilon: 0.0001,\n                },\n            ),\n        },\n    ),\n    window_open: WindowOpenAnim {\n        anim: Animation {\n            off: false,\n            kind: Easing(\n                EasingParams {\n                    duration_ms: 150,\n                    curve: EaseOutExpo,\n                },\n            ),\n        },\n        custom_shader: None,\n    },\n    window_close: WindowCloseAnim {\n        anim: Animation {\n            off: false,\n            kind: Easing(\n                EasingParams {\n                    duration_ms: 150,\n                    curve: EaseOutQuad,\n                },\n            ),\n        },\n        custom_shader: None,\n    },\n    horizontal_view_movement: HorizontalViewMovementAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 1.0,\n                    stiffness: 800,\n                    epsilon: 0.0001,\n                },\n            ),\n        },\n    ),\n    window_movement: WindowMovementAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 1.0,\n                    stiffness: 800,\n                    epsilon: 0.0001,\n                },\n            ),\n        },\n    ),\n    window_resize: WindowResizeAnim {\n        anim: Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 1.0,\n                    stiffness: 800,\n                    epsilon: 0.0001,\n                },\n            ),\n        },\n        custom_shader: None,\n    },\n    config_notification_open_close: ConfigNotificationOpenCloseAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 0.6,\n                    stiffness: 1000,\n                    epsilon: 0.001,\n                },\n            ),\n        },\n    ),\n    exit_confirmation_open_close: ExitConfirmationOpenCloseAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 0.6,\n                    stiffness: 500,\n                    epsilon: 0.01,\n                },\n            ),\n        },\n    ),\n    screenshot_ui_open: ScreenshotUiOpenAnim(\n        Animation {\n            off: false,\n            kind: Easing(\n                EasingParams {\n                    duration_ms: 200,\n                    curve: EaseOutQuad,\n                },\n            ),\n        },\n    ),\n    overview_open_close: OverviewOpenCloseAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 1.0,\n                    stiffness: 800,\n                    epsilon: 0.0001,\n                },\n            ),\n        },\n    ),\n    recent_windows_close: RecentWindowsCloseAnim(\n        Animation {\n            off: false,\n            kind: Spring(\n                SpringParams {\n                    damping_ratio: 1.0,\n                    stiffness: 800,\n                    epsilon: 0.001,\n                },\n            ),\n        },\n    ),\n}"
