niri-lua/src/snapshots/niri_lua__config_wrapper__tests__config_wrapper_default_cursor.snap
---
source: niri-lua/src/config_wrapper.rs
expression: cursor
---
"Cursor {\n    xcursor_theme: \"default\",\n    xcursor_size: 24,\n    hide_when_typing: false,\n    hide_after_inactive_ms: None,\n}"
