niri-lua/src/snapshots/niri_lua__config_wrapper__tests__config_wrapper_default_input.snap
---
source: niri-lua/src/config_wrapper.rs
expression: input
---
"Input {\n    keyboard: Keyboard {\n        xkb: Xkb {\n            rules: \"\",\n            model: \"\",\n            layout: \"\",\n            variant: \"\",\n            options: None,\n            file: None,\n        },\n        repeat_delay: 600,\n        repeat_rate: 25,\n        track_layout: Global,\n        numlock: false,\n    },\n    touchpad: Touchpad {\n        off: false,\n        tap: false,\n        dwt: false,\n        dwtp: false,\n        drag: None,\n        drag_lock: false,\n        natural_scroll: false,\n        click_method: None,\n        accel_speed: FloatOrInt(\n            0.0,\n        ),\n        accel_profile: None,\n        scroll_method: None,\n        scroll_button: None,\n        scroll_button_lock: false,\n        tap_button_map: None,\n        left_handed: false,\n        disabled_on_external_mouse: false,\n        middle_emulation: false,\n        scroll_factor: None,\n    },\n    mouse: Mouse {\n        off: false,\n        natural_scroll: false,\n        accel_speed: FloatOrInt(\n            0.0,\n        ),\n        accel_profile: None,\n        scroll_method: None,\n        scroll_button: None,\n        scroll_button_lock: false,\n        left_handed: false,\n        middle_emulation: false,\n        scroll_factor: None,\n    },\n    trackpoint: Trackpoint {\n        off: false,\n        natural_scroll: false,\n        accel_speed: FloatOrInt(\n            0.0,\n        ),\n        accel_profile: None,\n        scroll_method: None,\n        scroll_button: None,\n        scroll_button_lock: false,\n        left_handed: false,\n        middle_emulation: false,\n    },\n    trackball: Trackball {\n        off: false,\n        natural_scroll: false,\n        accel_speed: FloatOrInt(\n            0.0,\n        ),\n        accel_profile: None,\n        scroll_method: None,\n        scroll_button: None,\n        scroll_button_lock: false,\n        left_handed: false,\n        middle_emulation: false,\n    },\n    tablet: Tablet {\n        off: false,\n        calibration_matrix: None,\n        map_to_output: None,\n        left_handed: false,\n    },\n    touch: Touch {\n        off: false,\n        natural_scroll: false,\n        calibration_matrix: None,\n        map_to_output: None,\n    },\n    disable_power_key_handling: false,\n    warp_mouse_to_focus: None,\n    focus_follows_mouse: None,\n    workspace_auto_back_and_forth: false,\n    mod_key: None,\n    mod_key_nested: None,\n}"
