niri-lua/src/snapshots/niri_lua__config_wrapper__tests__config_wrapper_default_layout.snap
---
source: niri-lua/src/config_wrapper.rs
expression: layout
---
"Layout {\n    focus_ring: FocusRing {\n        off: false,\n        width: 4.0,\n        active_color: Color {\n            r: 0.49803922,\n            g: 0.78431374,\n            b: 1.0,\n            a: 1.0,\n        },\n        inactive_color: Color {\n            r: 0.3137255,\n            g: 0.3137255,\n            b: 0.3137255,\n            a: 1.0,\n        },\n        urgent_color: Color {\n            r: 0.60784316,\n            g: 0.0,\n            b: 0.0,\n            a: 1.0,\n        },\n        active_gradient: None,\n        inactive_gradient: None,\n        urgent_gradient: None,\n    },\n    border: Border {\n        off: true,\n        width: 4.0,\n        active_color: Color {\n            r: 1.0,\n            g: 0.78431374,\n            b: 0.49803922,\n            a: 1.0,\n        },\n        inactive_color: Color {\n            r: 0.3137255,\n            g: 0.3137255,\n            b: 0.3137255,\n            a: 1.0,\n        },\n        urgent_color: Color {\n            r: 0.60784316,\n            g: 0.0,\n            b: 0.0,\n            a: 1.0,\n        },\n        active_gradient: None,\n        inactive_gradient: None,\n        urgent_gradient: None,\n    },\n    shadow: Shadow {\n        on: false,\n        offset: ShadowOffset {\n            x: FloatOrInt(\n                0.0,\n            ),\n            y: FloatOrInt(\n                5.0,\n            ),\n        },\n        softness: 30.0,\n        spread: 5.0,\n        draw_behind_window: false,\n        color: Color {\n            r: 0.0,\n            g: 0.0,\n            b: 0.0,\n            a: 0.46666667,\n        },\n        inactive_color: None,\n    },\n    tab_indicator: TabIndicator {\n        off: false,\n        hide_when_single_tab: false,\n        place_within_column: false,\n        gap: 5.0,\n        width: 4.0,\n        length: TabIndicatorLength {\n            total_proportion: Some(\n                0.5,\n            ),\n        },\n        position: Left,\n        gaps_between_tabs: 0.0,\n        corner_radius: 0.0,\n        active_color: None,\n        inactive_color: None,\n        urgent_color: None,\n        active_gradient: None,\n        inactive_gradient: None,\n        urgent_gradient: None,\n    },\n    insert_hint: InsertHint {\n        off: false,\n        color: Color {\n            r: 0.49803922,\n            g: 0.78431374,\n            b: 1.0,\n            a: 0.5019608,\n        },\n        gradient: None,\n    },\n    preset_column_widths: [\n        Proportion(\n            0.3333333333333333,\n        ),\n        Proportion(\n            0.5,\n        ),\n        Proportion(\n            0.6666666666666666,\n        ),\n    ],\n    default_column_width: Some(\n        Proportion(\n            0.5,\n        ),\n    ),\n    preset_window_heights: [\n        Proportion(\n            0.3333333333333333,\n        ),\n        Proportion(\n            0.5,\n        ),\n        Proportion(\n            0.6666666666666666,\n        ),\n    ],\n    center_focused_column: Never,\n    always_center_single_column: false,\n    empty_workspace_above_first: false,\n    default_column_display: Normal,\n    gaps: 16.0,\n    struts: Struts {\n        left: FloatOrInt(\n            0.0,\n        ),\n        right: FloatOrInt(\n            0.0,\n        ),\n        top: FloatOrInt(\n            0.0,\n        ),\n        bottom: FloatOrInt(\n            0.0,\n        ),\n    },\n    background_color: Color {\n        r: 0.25,\n        g: 0.25,\n        b: 0.25,\n        a: 1.0,\n    },\n}"
