niri-lua/src/snapshots/niri_lua__config_wrapper__tests__config_wrapper_default_overview.snap
---
source: niri-lua/src/config_wrapper.rs
expression: overview
---
"Overview {\n    zoom: 0.5,\n    backdrop_color: Color {\n        r: 0.15,\n        g: 0.15,\n        b: 0.15,\n        a: 1.0,\n    },\n    workspace_shadow: WorkspaceShadow {\n        off: false,\n        offset: ShadowOffset {\n            x: FloatOrInt(\n                0.0,\n            ),\n            y: FloatOrInt(\n                10.0,\n            ),\n        },\n        softness: 40.0,\n        spread: 10.0,\n        color: Color {\n            r: 0.0,\n            g: 0.0,\n            b: 0.0,\n            a: 0.3137255,\n        },\n    },\n}"
