niri-lua/src/snapshots/niri_lua__config_wrapper__tests__config_wrapper_default_top_level.snap
---
source: niri-lua/src/config_wrapper.rs
expression: top_level
---
(
    false,
    Some(
        "~/Pictures/Screenshots/Screenshot from %Y-%m-%d %H-%M-%S.png",
    ),
)
