niri-lua/src/snapshots/niri_lua__config_wrapper__tests__cursor_config_transformation.snap
---
source: niri-lua/src/config_wrapper.rs
expression: "(theme, size, hide)"
---
(
    "Adwaita",
    24,
    true,
)
