niri-lua/src/snapshots/niri_lua__config_wrapper__tests__dirty_flags_after_multiple_changes.snap
---
source: niri-lua/src/config_wrapper.rs
expression: flags
---
(
    true,
    true,
    true,
    true,
    false,
    false,
)
